# RubikTeacher

./: CMakeLists.txt  README.md  RubikTeacher.pro  qtRubik.rc  ressources.qrc  rubik_en.qm  rubik_en.ts  rubik_fr.qm  rubik_fr.ts
src/: Cube.cpp  Cube.h  QComparatif_Frame.cpp  QComparatif_Frame.h  Regression.cpp  Regression.h  constants.h  couleurpalette.cpp  couleurpalette.h  glrubik.cpp  glrubik.h  helpclass.cpp  helpclass.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mystandarditem.cpp  mystandarditem.h  palette.cpp  palette.h  palette.ui  qdisplaydescription.cpp  qdisplaydescription.h  qdisplaysoluce.cpp  qdisplaysoluce.h  qpushbuttonmovecube.cpp  qpushbuttonmovecube.h  qthreadmvtface.cpp  qthreadmvtface.h  resolution.cpp  resolution.h  resolution_Layer_by_Layer.cpp  resolution_friedriech.cpp  rubik_croix.cpp  rubik_croix.h  rubik_croix_carres.cpp  rubik_croix_carres.h  rubik_plat.cpp  rubik_plat.h  (+7 more)
src/Cube2D/: couleurpalette.cpp  couleurpalette.h  palette.cpp  palette.h  palette.ui  rubik_croix.cpp  rubik_croix.h  rubik_croix_carres.cpp  rubik_croix_carres.h  rubikplat.cpp  rubikplat.h  rubikplat.ui  rubikplateditor.cpp  rubikplateditor.h  rubikplateditor.ui
src/Cube3D/: Cube.cpp  Cube.h  glrubik.cpp  glrubik.h  qthreadmvtface.cpp  qthreadmvtface.h
src/ResolutionMethod/: resolution.cpp  resolution.h  resolution_Layer_by_Layer.cpp  resolution_friedriech.cpp  resolution_kociemba.cpp
src/ResolutionMethod/kociemba/: algo.h  algo_kociemba.cpp  cube.cpp  cube.h  heuristic.hpp  search.hpp
